opspal-internal/cross-platform-ops/metadata/objects/Contact/fields/Clean_Status__c.field-meta.xml
<CustomField>
    <fullName>Clean_Status__c</fullName>
    <description>Contact data quality classification status</description>
    <label>Clean Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OK</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Merge</fullName>
            </value>
            <value>
                <fullName>Delete</fullName>
            </value>
            <value>
                <fullName>Archive</fullName>
            </value>
            <value>
                <fullName>Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>