opspal-internal/cross-platform-ops/metadata/objects/Contact/fields/Delete_Reason__c.field-meta.xml
<CustomField>
    <fullName>Delete_Reason__c</fullName>
    <description>Reason for marking contact for deletion or review</description>
    <label>Delete Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>