opspal-internal/cross-platform-ops/metadata/objects/Contact/fields/IsMaster__c.field-meta.xml
<CustomField>
    <fullName>IsMaster__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this is the master record for merge operations</description>
    <label>Is Master Record</label>
    <type>Checkbox</type>
</CustomField>