opspal-internal/cross-platform-ops/metadata/objects/Contact/recordTypes/Standard_Contact.recordType-meta.xml
<RecordType>
    <fullName>Standard_Contact</fullName>
    <active>true</active>
    <label>Standard Contact</label>
</RecordType>